# systemc-hello

./: CMakeLists.txt  Hello_SystemC.cpp  main.cpp
